added XOAuth support